2017-03-05  Araki Ken  <arakiken@users.sf.net>

	* mc_im.c: get_im_info() is fixed.

	* ui_screen.c:
	  - "use_aafont" is added to OSC 5380/5381.
	  - ui_window_update_all(ui_layout_t) instead of ui_window_update_all(ui_screen_t)
	    is called in window_resized().

	* ui_font_config.[ch]: ui_is_using_aafont() is added.

	* mc_font.c: get_font_file() returns "*aafont" if use_aafont option is true.

	* wayland/ui_display.c: Minor fixes.

2017-03-04  Araki Ken  <arakiken@users.sf.net>

	* ui.h, ui_display.c:
	  - During wl_shell_surface_resize(), Display::is_resizing is 1.
	    This forces shell_surface_configure() not to modify specified width and height,
	    and permits miximizing windows.
	  - ui_display_receive_next_events() calls wl_display_dispatch() once per
	    wl_display.

	* ui_main_config.c: The default value of "input_method" option is "ibus"
	  on wayland.

	* ui_layout.c: x_window_resize_with_margin(scrollbar) is called before
	  x_window_resize_with_margin(screen) in reset_layout().

2017-03-04  Araki Ken  <arakiken@users.sf.net>

	* quartz/ui_window.c:
	  - view_update() is called in ui_window_set_wall_picture() in order to
	    update screen in changing a wall picture.
	  - ui_window_draw_*_image_string() are removed.

	* fb/connect_dialog.c:
	  - ui_window_get_str() is called in key_pressed().
	  - ui_window_console_draw_string() is called on console.

	* configure.in, inputmethod/*/Makefile.in:
	  - {POBL|MEF}_LIBS_FOR_MODULE are replaced by LPOBL and LMEF

	* console/ui_window.c:
	  - XK_BackSpace, XK_Tab and XK_Returns key events are correctly processed.
	  - ui_window_draw_*_string() functions are removed.

	* main-con.c:
	  - termios is reverted to the default value on exit().
	  - Whether read() returns -1 is not checked.

	* */ui.h, ui_draw_str.c, ui_picture.c:
	  - DRAW_SCREEN_IN_PIXELS, NO_DRAW_IMAGE_STRING are added
	  - HAVE_PTHREAD is defiend or undefined in ui.h instead of ui_picture.c.
